SERVER-12524 distinct solution for empty query cannot use a special index.